style: align center iframes

--- a/doc/.vuepress/styles/index.scss
+++ b/doc/.vuepress/styles/index.scss
@@ -48,6 +48,11 @@
   .navbar .navbar-items-wrapper {
     font-size: 1rem;
   }
+
+  iframe {
+    margin:auto;
+    display:block;
+  }
 }
 
 html.dark {
